--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,11 @@
 {
   "presets": [
-    "env",
+    ["env", {
+      "targets": {
+        "node": "7.9",
+        "browsers": ["chrome 58"]
+      }
+    }],
     "react"
   ]
 }
