--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "electron": "^1.7.10",
     "node-sass": "^4.7.2",
     "pug-cli": "^1.0.0-alpha6"
+  },
+  "dependencies": {
+    "hyperapp": "^1.0.0"
   }
 }
