--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pug-cli": "^1.0.0-alpha6"
   },
   "dependencies": {
-    "hyperapp": "^1.0.0"
+    "hyperapp": "^1.0.0",
+    "ldapjs": "^1.0.1"
   }
 }
