--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "coffeescript": "^2.1.0",
+    "coffeescript": "^2.1.1",
     "electron": "^1.7.10",
+    "milligram-sass": "^1.3.0",
     "node-sass": "^4.7.2",
+    "node-sass-package-importer": "^5.0.3",
     "pug-cli": "^1.0.0-alpha6"
   },
   "dependencies": {
     "hyperapp": "^1.0.0",
+    "js-yaml": "^3.10.0",
     "ldapjs": "^1.0.1"
   }
 }
