--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "babel-preset-react": "^6.24.1",
     "coffeescript": "^2.1.1",
     "electron": "^1.7.10",
-    "milligram-sass": "^1.3.0",
     "node-sass": "^4.7.2",
     "node-sass-package-importer": "^5.0.3",
-    "pug-cli": "^1.0.0-alpha6"
+    "pug-cli": "^1.0.0-alpha6",
+    "spectre.css": "^0.5.0"
   },
   "dependencies": {
     "hyperapp": "^1.0.0",
