--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "author": "IGARASHI Makoto",
   "license": "MIT",
   "devDependencies": {
+    "asar": "^0.14.0",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "coffeescript": "^2.1.1",
     "electron": "^1.7.10",
+    "ncp": "^2.0.0",
     "node-sass": "^4.7.2",
     "node-sass-package-importer": "^5.0.3",
     "pug-cli": "^1.0.0-alpha6",
